# ML-Monitoring-and-Deployment

./: .gitignore  .gitmodules  README.md
ml_api_webapp/: Makefile  alembic.ini  gunicorn_logging.conf  pyproject.toml  run.py  setup.cfg  tox.ini
ml_api_webapp/alembic/versions/: cf4abb13368d_create_prediction_tables.py
ml_api_webapp/api/: app.py  config.py  controller.py
ml_api_webapp/api/persistence/: core.py  data_access.py  models.py
ml_api_webapp/api/spec/: api.yaml
ml_api_webapp/api/static/stylesheets/: login.css  predict.css  register.css
ml_api_webapp/api/templates/: login_page.html  predict_lp.html  register.html
ml_api_webapp/docker/: Dockerfile  Dockerfile.test  docker-compose.test.yml  docker-compose.yml
ml_api_webapp/requirements/: requirements.txt
ml_api_webapp/scripts/: differential_tests.sh  populate_database.py
ml_api_webapp/tests/: __init__.py  conftest.py  test_api.py  test_back_to_back_models.py  test_persistence.py
